2008-12-08  Bastien Nocera  <hadess@hadess.net>

	* data/icons/16x16/Makefile.am:
	* data/icons/16x16/totem-tv.svg:
	* data/icons/22x22/Makefile.am:
	* data/icons/22x22/totem-tv.svg:
	* data/icons/24x24/Makefile.am:
	* data/icons/32x32/Makefile.am:
	* data/icons/32x32/totem-tv.svg:
	* data/icons/48x48/Makefile.am:
	* data/icons/scalable/Makefile.am:
	* data/icons/scalable/totem-tv.svg:
	Add TV icon from da.needcoffee at googlemail.com
	http://lists.freedesktop.org/archives/tango-artists/2007-June/001336.html

	* src/totem-menu.c (update_dvb_menu_items): Use
	new icon in the menus for DVB adapters (Closes: #515763)

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_set_show_visuals):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_set_show_visuals):
	* src/backend/bacon-video-widget.h:
	* src/totem-preferences.c (totem_prefs_set_show_visuals),
	(checkbutton2_toggled_cb), (totem_setup_preferences):
	Remove retval from bacon_video_widget_set_show_visuals()
	as both backends can switch visuals on-the-fly

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/totem.ui:
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_realize), (bacon_video_widget_unrealize),
	(bacon_video_widget_set_fullscreen), (bacon_video_widget_new):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_realize), (bacon_video_widget_unrealize),
	(bacon_video_widget_set_fullscreen):
	* src/backend/bacon-video-widget.h:
	* src/totem-preferences.c (totem_setup_preferences):
	* src/totem-preferences.h:
	* src/totem.c (video_widget_create): Kill NVTV support,
	nv supports tv-out through XRandR for the G80 (GeForce 8000) and up,
	and nouveau for pretty much everything it supports
	(Closes: #473692)

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/totem-options.c (totem_options_process_for_server):
	* src/totem-options.h:
	* src/totem-private.h: