@@ -2396,7 +2396,7 @@ totem_action_remote (Totem *totem, TotemRemoteCommand cmd, const char *url)
 	if (handled != FALSE
 			&& gtk_window_is_active (GTK_WINDOW (totem->win))
 			&& totem_fullscreen_is_fullscreen (totem->fs) != FALSE) {
-		totem_fullscreen_motion_notify (NULL, NULL, totem->fs);
+		totem_fullscreen_show_popups (totem->fs, TRUE);
 	}
 }
 
@@ -2602,7 +2602,7 @@ static void
 on_mouse_click_fullscreen (GtkWidget *widget, Totem *totem)
 {
 	if (totem_fullscreen_is_fullscreen (totem->fs) != FALSE)
-		totem_fullscreen_motion_notify (NULL, NULL, totem->fs);
+		totem_fullscreen_show_popups (totem->fs, TRUE);
 }
 
 static gboolean
@@ -2829,16 +2829,19 @@ totem_action_handle_key_press (Totem *totem, GdkEventKey *event)
 			totem_action_fullscreen (totem, FALSE);
 		break;
 	case GDK_Left:
-		if (gtk_widget_get_direction (totem->win) == GTK_TEXT_DIR_RTL)
-			totem_action_handle_seek (totem, event, TRUE);
-		else
-			totem_action_handle_seek (totem, event, FALSE);
-		break;
 	case GDK_Right:
-		if (gtk_widget_get_direction (totem->win) == GTK_TEXT_DIR_RTL)
-			totem_action_handle_seek (totem, event, FALSE);
-		else
-			totem_action_handle_seek (totem, event, TRUE);
+		{
+			gboolean is_forward;
+
+			if (totem_is_fullscreen (totem) != FALSE)
+				totem_fullscreen_show_popups (totem->fs, FALSE);
+
+			is_forward = (event->keyval == GDK_Right);
+			/* Switch direction in RTL environment */
+			if (gtk_widget_get_direction (totem->win) == GTK_TEXT_DIR_RTL)
+				is_forward = !is_forward;
+			totem_action_handle_seek (totem, event, is_forward);
+		}
 		break;
 	case GDK_space:
 		if (totem_is_fullscreen (totem) != FALSE || gtk_widget_is_focus (GTK_WIDGET (totem->bvw)) != FALSE)
@@ -2929,7 +2932,7 @@ totem_action_handle_scroll (Totem *totem, GdkScrollDirection direction)
 	gboolean retval = TRUE;
 
 	if (totem_fullscreen_is_fullscreen (totem->fs) != FALSE)
-		totem_fullscreen_motion_notify (NULL, NULL, totem->fs);
+		totem_fullscreen_show_popups (totem->fs, TRUE);
 
 	switch (direction) {
 	case GDK_SCROLL_UP:
